# PetitLink

./: .dockerignore  .gitignore  Dockerfile  db.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  schema.py
petitlink/: __init__.py  db.py  settings.py
petitlink/api/: Dockerfile  __init__.py  pyproject.toml  routes.py
petitlink/api/app/: core.py  models.py  routes.py  settings.py
petitlink/auth/: Dockerfile  __init__.py  app.py  core.py  models.py  pyproject.toml  routes.py
petitlink/auth/app/: core.py  models.py  routes.py  settings.py
petitlink/petitlink/: core.py  pyproject.toml
petitlink/petitlink/templates/: index.html  login.html  register.html
petitlink/routes/: api.py  auth.py
petitlink/web/: Dockerfile  forms.py  routes.py  settings.py
petitlink/web/app/: core.py  forms.py  routes.py  settings.py
petitlink/web/templates/: login.html  new.html  register.html
templates/: base.html  index.html
templates/auth/: login.html
tests/: conftest.py  test_auth.py
