[tool.poetry]
name = "practice001"
version = "0.1.0"
description = ""
authors = ["Jim Jeon <jimjeon.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.26"
pydantic = "^2.6.1"
uvicorn = "^0.27.1"
redis = "^5.0.1"
pyjwt = "^2.8.0"
jinja2 = "^3.1.3"
fastapi = {extras = ["all"], version = "^0.110.0"}
itsdangerous = "^2.1.2"
pytest = "^8.0.2"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.5"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]