[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Jim Jeon <jimjeon.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.0"}
sqlalchemy = "^2.0.28"
redis = "^5.0.3"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
